# finalcos30082

./: .gitignore  README.md  pyproject.toml  test_triplet.py
notebooks/: 01_eda.ipynb  02_face_classification.ipynb  03_face_metric_learning.ipynb  04_anti_spoofing.ipynb  05_emotion_detection.ipynb
scripts/: app.sh  bulk_import.py  evaluate_all_models.py  evaluate_classification_accuracy.py  evaluate_verification.py  notebook.sh  setup-train.sh  setup.sh  train_all.sh
src/core/: __init__.py  emotion_recognizer.py  face_database.py  face_detector.py  face_verifier.py  liveness_checker.py
src/models/: __init__.py  anti_spoof_model.py  edgeface_backbone.py  emotion_model.py  face_embed_classifier.py  face_embed_triplet.py
src/ui/: app.py
src/utils/: __init__.py  metrics.py  transforms.py
