[project]
name = "face-recognition-attendance"
version = "0.1.0"
description = "Face Recognition Attendance System with Anti-Spoofing & Emotion Detection"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "facenet-pytorch>=2.5",
    "streamlit>=1.30",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "pillow>=10.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[project.optional-dependencies]
train = [
    "jupyter>=1.0",
    "ipywidgets>=8.0",
    "seaborn>=0.12",
    "umap-learn>=0.5",
    "tensorboard>=2.14",
]
